fix bug 317396, edited template disappears when saving or autosaving as draft, sr=mscott, part of patch by mkmelin+bugzilla@cc.hut.fi